# wgpu-tutorial

./: Cargo.toml  build.rs
src/: camera.rs  colored_mesh_renderer.rs  instance.rs  lib.rs  light.wgsl  main.rs  model.rs  renderer.rs  resources.rs  shader.wgsl  ui.rs
src/shaders/: color_shader.wgsl  shader.wgsl  simple_shader.wgsl
