[package]
name = "learn-graphics-with-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bytemuck = {version = "1.14.0", features = ["derive"]}
cgmath = "0.18.0"
egui = "0.25"
egui-wgpu = {version = "0.25", features = ["winit"]}
egui-winit = "0.25"
env_logger = "0.10.0"
image = "0.24.7"
log = "0.4.20"
pollster = "0.3.0"
tobj = {version = "4.0.0", features = ["async"]}
wgpu = "0.18"
winit = "0.29.4"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
